--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 </head>
 
 <body>
-
   <!-- <a href="index.html">a</a> -->
-
   <main>
     <header class="main-header-card card">
       <h1>Social Media <span class="ten-x">10x</span> <span class="italic">Faster</span> with AI</h1>
@@ -31,14 +29,18 @@
     </section>
 
     <section class="consistent-schedule-card card">
-      <h2>Maintain a consistent posting schedule.</h2>
-      <img src="assets/images/illustration-consistent-schedule.webp" alt="illustration-consistent-schedule">
+      <div class="container">
+        <h2>Maintain a consistent posting schedule.</h2>
+        <img src="assets/images/illustration-consistent-schedule.webp" alt="illustration-consistent-schedule">
+      </div>
     </section>
 
     <section class="schedule-post-card card">
-      <h2>Schedule to social media.</h2>
-      <img src="assets/images/illustration-schedule-posts.webp" alt="illustration-schedule-posts">
-      <p>Optimize post timings to publish content at the perfect time for your audience.</p>
+      <div class="container">
+        <h2>Schedule to social media.</h2>
+        <img src="assets/images/illustration-schedule-posts.webp" alt="illustration-schedule-posts">
+        <p>Optimize post timings to publish content at the perfect time for your audience.</p>
+      </div>
     </section>
 
     <section class="grow-followers-card card">
@@ -53,15 +55,18 @@
     </section>
 
     <section class="create-post-card card">
-      <h3>Create and schedule content <span class="italic">quicker.</span></h3>
-      <img src="assets/images/illustration-create-post.webp" alt="illustration-create-post">
+      <div class="container">
+        <h3>Create and schedule content <span class="italic">quicker.</span></h3>
+        <img src="assets/images/illustration-create-post.webp" alt="illustration-create-post">
+      </div>
     </section>
 
     <section class="ai-content-card card">
-      <h3>Write your content using AI.</h3>
-      <img src="assets/images/illustration-ai-content.webp" alt="illustration-ai-content">
+      <div class="container">
+        <h3>Write your content using AI.</h3>
+        <img src="assets/images/illustration-ai-content.webp" alt="illustration-ai-content">
+      </div>
     </section>
-    
   </main>
 
   <footer class="attribution">
@@ -71,7 +76,7 @@
     </div>
     <div>
       <span>Coded by</span>
-      <a href="#">Kingsley Jack Festus</a>
+      <a href="https://www.twitter.com/oceanGod1">Kingsley Jack Festus</a>
     </div>
   </footer>
 </body>
