updated html classes and grid format

--- a/index.html
+++ b/index.html
@@ -4,38 +4,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
   <meta name="author" content="Kingsley Jack Festus">
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-
   <title>Frontend Mentor | Bento grid</title>
 </head>
 
 <body>
-  <!-- <a href="index.html">a</a> -->
   <main>
-    <header class="main-header-card card">
+    <header class="card card1">
       <h1>Social Media <span class="ten-x">10x</span> <span class="italic">Faster</span> with AI</h1>
       <figure>
-        <img class="rating-stars" src="assets/images/illustration-five-stars.webp" alt="rating illustration-five-stars">
+        <img src="assets/images/illustration-five-stars.webp" alt="rating illustration-five-stars">
         <figcaption>Over 4,000 5-star reviews</figcaption>
       </figure>
     </header>
 
-    <section class="multiple-platforms-card card">
+    <section class="card card2">
       <img src="assets/images/illustration-multiple-platforms.webp" alt="illustration-multiple-platforms">
       <h2>Manage multiple accounts and platforms.</h2>
     </section>
 
-    <section class="consistent-schedule-card card">
+    <section class="card3 card">
       <div class="container">
         <h2>Maintain a consistent posting schedule.</h2>
         <img src="assets/images/illustration-consistent-schedule.webp" alt="illustration-consistent-schedule">
       </div>
     </section>
 
-    <section class="schedule-post-card card">
+    <section class="card4 card">
       <div class="container">
         <h2>Schedule to social media.</h2>
         <img src="assets/images/illustration-schedule-posts.webp" alt="illustration-schedule-posts">
@@ -43,25 +40,25 @@
       </div>
     </section>
 
-    <section class="grow-followers-card card">
+    <section class="card5 card">
       <img src="assets/images/illustration-grow-followers.webp" alt="illustration-grow-followers">
       <h3>Grow followers with non-stop content.</h3>
     </section>
 
-    <section class="audience-growth-card card">
+    <section class="card6 card">
       <h4>>56%</h4>
       <p>faster audience growth</p>
       <img src="assets/images/illustration-audience-growth.webp" alt="illustration-audience-growth">
     </section>
 
-    <section class="create-post-card card">
+    <section class="card7 card">
       <div class="container">
         <h3>Create and schedule content <span class="italic">quicker.</span></h3>
         <img src="assets/images/illustration-create-post.webp" alt="illustration-create-post">
       </div>
     </section>
 
-    <section class="ai-content-card card">
+    <section class="card8 card">
       <div class="container">
         <h3>Write your content using AI.</h3>
         <img src="assets/images/illustration-ai-content.webp" alt="illustration-ai-content">
