--- a/index.html
+++ b/index.html
@@ -1,81 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Kingsley Jack Festus" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
+    <title>Frontend Mentor | Bento grid</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="Kingsley Jack Festus">
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <title>Frontend Mentor | Bento grid</title>
-</head>
+  <body>
+    <main>
+      <header class="card card1">
+        <h1
+          >Social Media <span class="ten-x">10x</span>
+          <span class="italic">Faster</span> with AI</h1
+        >
+        <figure>
+          <img
+            src="assets/images/illustration-five-stars.webp"
+            alt="rating illustration-five-stars"
+          />
+          <figcaption>Over 4,000 5-star reviews</figcaption>
+        </figure>
+      </header>
 
-<body>
-  <main>
-    <header class="card card1">
-      <h1>Social Media <span class="ten-x">10x</span> <span class="italic">Faster</span> with AI</h1>
-      <figure>
-        <img src="assets/images/illustration-five-stars.webp" alt="rating illustration-five-stars">
-        <figcaption>Over 4,000 5-star reviews</figcaption>
-      </figure>
-    </header>
+      <section class="card card2">
+        <img
+          src="assets/images/illustration-multiple-platforms.webp"
+          alt="illustration-multiple-platforms"
+        />
+        <h2>Manage multiple accounts and platforms.</h2>
+      </section>
 
-    <section class="card card2">
-      <img src="assets/images/illustration-multiple-platforms.webp" alt="illustration-multiple-platforms">
-      <h2>Manage multiple accounts and platforms.</h2>
-    </section>
+      <section class="card3 card">
+        <div class="container">
+          <h2>Maintain a consistent posting schedule.</h2>
+          <img
+            src="assets/images/illustration-consistent-schedule.webp"
+            alt="illustration-consistent-schedule"
+          />
+        </div>
+      </section>
 
-    <section class="card3 card">
-      <div class="container">
-        <h2>Maintain a consistent posting schedule.</h2>
-        <img src="assets/images/illustration-consistent-schedule.webp" alt="illustration-consistent-schedule">
-      </div>
-    </section>
+      <section class="card4 card">
+        <div class="container">
+          <h2>Schedule to social media.</h2>
+          <img
+            src="assets/images/illustration-schedule-posts.webp"
+            alt="illustration-schedule-posts"
+          />
+          <p
+            >Optimize post timings to publish content at the perfect time for
+            your audience.</p
+          >
+        </div>
+      </section>
 
-    <section class="card4 card">
-      <div class="container">
-        <h2>Schedule to social media.</h2>
-        <img src="assets/images/illustration-schedule-posts.webp" alt="illustration-schedule-posts">
-        <p>Optimize post timings to publish content at the perfect time for your audience.</p>
-      </div>
-    </section>
+      <section class="card5 card">
+        <img
+          src="assets/images/illustration-grow-followers.webp"
+          alt="illustration-grow-followers"
+        />
+        <h3>Grow followers with non-stop content.</h3>
+      </section>
 
-    <section class="card5 card">
-      <img src="assets/images/illustration-grow-followers.webp" alt="illustration-grow-followers">
-      <h3>Grow followers with non-stop content.</h3>
-    </section>
+      <section class="card6 card">
+        <h4>>56%</h4>
+        <p>faster audience growth</p>
+        <img
+          src="assets/images/illustration-audience-growth.webp"
+          alt="illustration-audience-growth"
+        />
+      </section>
 
-    <section class="card6 card">
-      <h4>>56%</h4>
-      <p>faster audience growth</p>
-      <img src="assets/images/illustration-audience-growth.webp" alt="illustration-audience-growth">
-    </section>
+      <section class="card7 card">
+        <div class="container">
+          <h3
+            >Create and schedule content
+            <span class="italic">quicker.</span></h3
+          >
+          <img
+            src="assets/images/illustration-create-post.webp"
+            alt="illustration-create-post"
+          />
+        </div>
+      </section>
 
-    <section class="card7 card">
-      <div class="container">
-        <h3>Create and schedule content <span class="italic">quicker.</span></h3>
-        <img src="assets/images/illustration-create-post.webp" alt="illustration-create-post">
-      </div>
-    </section>
-
-    <section class="card8 card">
-      <div class="container">
-        <h3>Write your content using AI.</h3>
-        <img src="assets/images/illustration-ai-content.webp" alt="illustration-ai-content">
-      </div>
-    </section>
-  </main>
-
-  <footer class="attribution">
-    <div>
-      <span>Challenge by</span>
-      <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor.</a>
-    </div>
-    <div>
-      <span>Coded by</span>
-      <a href="https://www.twitter.com/oceanGod1">Kingsley Jack Festus</a>
-    </div>
-  </footer>
-</body>
-
+      <section class="card8 card">
+        <div class="container">
+          <h3>Write your content using AI.</h3>
+          <img
+            src="assets/images/illustration-ai-content.webp"
+            alt="illustration-ai-content"
+          />
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
